--- a/index.html
+++ b/index.html
@@ -5,9 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kids-Education</title>
     <link rel="stylesheet" href="styles/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
-    <header></header>
+    <header>
+      <!-- navbar -->
+      <nav>
+        <div class="logo">
+          <img src="./assets/logo.png" alt="site logo" />
+          <h3>SCHOOL</h3>
+        </div>
+        <div class="menu">
+          <ul>
+            <li class="menu-item"><a href="#" class="orange-color">home</a></li>
+            <li class="menu-item"><a href="#" class="sky-blue">about</a></li>
+            <li class="menu-item">
+              <a href="#" class="nil-color">facilities</a>
+            </li>
+            <li class="menu-item">
+              <a href="#" class="blue-color">admission</a>
+            </li>
+          </ul>
+        </div>
+        <button class="menu-btn">Contact</button>
+        <span class="hamburger"><i class="fa-solid fa-bars"></i></span>
+      </nav>
+    </header>
     <body></body>
     <footer></footer>
   </body>
