added banner section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,28 @@
         <span class="hamburger"><i class="fa-solid fa-bars"></i></span>
       </nav>
     </header>
-    <body></body>
+    <body>
+      <!-- banner section -->
+      <section class="banner">
+        <div class="banner-container">
+          <div class="banner-description">
+            <h1>
+              <span class="orange-color">Empowering</span><br />
+              students from small age
+              <span class="sky-blue">towards vision</span>
+            </h1>
+            <p>
+              With the courage, Confidence, Creativity and Compassion to make
+              their Unique Contribution in a Diverse and Dynamic World.
+            </p>
+            <button>Enroll Now</button>
+          </div>
+          <div class="banner-image">
+            <img src="./assets/hero-kids.png" alt="" />
+          </div>
+        </div>
+      </section>
+    </body>
     <footer></footer>
   </body>
 </html>
