added curriculum section

--- a/index.html
+++ b/index.html
@@ -58,6 +58,56 @@
           </div>
         </div>
       </section>
+      <!-- curriculum section -->
+      <section class="curriculum">
+        <div class="curriculum-container">
+          <h2 class="section-title">Standard Curriculum</h2>
+          <div class="curriculum-card-container">
+            <div class="curriculum-card">
+              <div class="curriculum-image">
+                <img src="./assets/kinder.png" alt="" />
+              </div>
+              <h4>Kinder (3-6) Years</h4>
+              <p>
+                School is dedicated to providing a superior elementary and
+                middle-school education whose fundamental goals for each child
+                are a disciplined.
+              </p>
+              <a href="#" class="sky-blue">Read More</a>
+            </div>
+            <div class="curriculum-card">
+              <div class="curriculum-image">
+                <img src="./assets/elementary.png" alt="" />
+              </div>
+              <h4>Elementary School</h4>
+              <p>
+                School is dedicated to providing a superior elementary and
+                middle-school education whose fundamental goals for each child
+                are a disciplined.
+              </p>
+              <a href="#" class="orange-color">Read More</a>
+            </div>
+            <div class="curriculum-card">
+              <div class="curriculum-image">
+                <img src="./assets/middle.png" alt="" />
+              </div>
+              <h4>Middle (10-16) Years</h4>
+              <p>
+                School is dedicated to providing a superior elementary and
+                middle-school education whose fundamental goals for each child
+                are a disciplined.
+              </p>
+              <a href="#" class="blue-color">Read More</a>
+            </div>
+          </div>
+          <div class="arrow">
+            <div class="left-arrow"><i class="fa-solid fa-angle-left"></i></div>
+            <div class="left-right">
+              <i class="fa-solid fa-angle-right"></i>
+            </div>
+          </div>
+        </div>
+      </section>
     </body>
     <footer></footer>
   </body>
