--- a/index.html
+++ b/index.html
@@ -108,6 +108,68 @@
           </div>
         </div>
       </section>
+      <!-- our story section -->
+      <section class="our-story padding">
+        <div class="our-story-container">
+          <h2 class="section-title">Our Stories</h2>
+          <div class="our-story-card-container">
+            <div class="our-story-card item1">
+              <div class="story-card-image">
+                <img src="./assets/story-1.png" alt="" />
+                <span class="story-badge badge1">November 19, 2019</span>
+              </div>
+              <div class="story-card-description">
+                <h4>A fun toddler coloring training on classroom</h4>
+                <p>
+                  Beautiful branding for changes by Never Now in Australia.
+                  changes is a platform for open discussion in an inclusive and
+                  collaborative environment, providing the...
+                </p>
+              </div>
+            </div>
+            <div class="our-story-card item2">
+              <div class="story-card-image">
+                <img src="./assets/story-2.png" alt="" />
+                <span class="story-badge badge2">November 19, 2019</span>
+              </div>
+              <div class="story-card-description">
+                <h5>Find out if a school fits the family’s needs</h5>
+              </div>
+            </div>
+            <div class="our-story-card item3">
+              <div class="story-card-image">
+                <img src="./assets/story-3.png" alt="" />
+                <span class="story-badge badge3">November 19, 2019</span>
+              </div>
+              <div class="story-card-description">
+                <h5>Summer math & literacy centres for kids</h5>
+              </div>
+            </div>
+            <div class="our-story-card item4">
+              <div class="story-card-image">
+                <img src="./assets/story-4.png" alt="" />
+                <span class="story-badge badge4">September 10, 2019</span>
+              </div>
+              <div class="story-card-description">
+                <h5>Classroom management techniques for new tutors</h5>
+              </div>
+            </div>
+            <div class="our-story-card item5">
+              <div class="story-card-image">
+                <img src="./assets/story-5.png" alt="" />
+                <span class="story-badge badge5">December 19, 2019</span>
+              </div>
+              <div class="story-card-description">
+                <h5>Conversation rhymes improve kids listening</h5>
+              </div>
+            </div>
+          </div>
+
+          <div class="story-button">
+            <button class="story-btn">View All</button>
+          </div>
+        </div>
+      </section>
     </body>
     <footer></footer>
   </body>
