--- a/index.html
+++ b/index.html
@@ -171,6 +171,46 @@
         </div>
       </section>
     </body>
-    <footer></footer>
+    <!-- footer -->
+    <footer>
+      <div class="footer-description">
+        <div class="footer-logo">
+          <img src="./assets/logo2.png" alt="logo" />
+          <span
+            >Kids<br />
+            Education</span
+          >
+        </div>
+        <p>
+          School is dedicated to providing a superior elementary and
+          middle-school education whose fundamental goals for each child are a
+          disciplined.
+        </p>
+      </div>
+      <div class="footer-nav">
+        <h5>About School</h5>
+        <div class="footer-menu">
+          <ul>
+            <li><a href="#">home</a></li>
+            <li><a href="#">about</a></li>
+            <li>
+              <a href="#">facilities</a>
+            </li>
+            <li>
+              <a href="#">admission</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-social">
+        <h5>Keep In Touch</h5>
+        <div class="social-container">
+          <a href="#"><img src="./assets/fb.png" alt="" /></a>
+          <a href="#"><img src="./assets/google+.png" alt="" /></a>
+          <a href="#"><img src="./assets/dribble.png" alt="" /></a>
+          <a href="#"><img src="./assets/twitter.png" alt="" /></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
