added marque text

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <body>
     <header>
       <!-- navbar -->
+
       <nav>
         <div class="logo">
           <img src="./assets/logo.png" alt="site logo" />
@@ -36,6 +37,12 @@
         <button class="menu-btn">Contact</button>
         <span class="hamburger"><i class="fa-solid fa-bars"></i></span>
       </nav>
+      <marquee class="marque-text"
+        ><span class="orange-color">Empowering</span>
+        students from small age
+        <span class="sky-blue">towards vision.</span>
+        <span class="blue-color">Welcome</span> to our kids school.</marquee
+      >
     </header>
     <body>
       <!-- banner section -->
